--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,18 +10,8 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 
-body {
-  background: #a71b3e;
-  color: white;
-  font: 14px/1.5 Helvetica, Arial, sans-serif;
-  margin: 20px auto;
-  width: 500px;
-}
-a {
-  color: #efaaca;
-  text-decoration: none;
-}
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "custom";
